--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-resources/
+src/main/resources/application.yml
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
